<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_layout">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="?attr/colorOnSecondary"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_arrow"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="?attr/colorPrimary"
        android:background="@drawable/rounded_top"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/introdution_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/save_to_get_quick_access"
            android:textColor="?attr/colorOnPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/name_save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/device_name"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/introdution_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_save_text"
                android:layout_width="match_parent"
                android:inputType="textNoSuggestions"
                android:layout_height="55dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/mac_address_save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mac_address"
            app:boxStrokeErrorColor="?attr/colorOnPrimary"
            app:errorTextColor="?attr/colorOnPrimary"
            app:errorIconTint="?attr/colorOnPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/name_save_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mac_address_save_text"
                android:layout_width="match_parent"
                android:inputType="textNoSuggestions"
                android:maxEms="17"
                android:layout_height="55dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/save"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:background="@drawable/button_on_primary_color"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/mac_address_save_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>