<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_layout">

    <TextView
        android:id="@+id/wake_on_lan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="Wake-on-LAN"
        android:textColor="?attr/colorOnSecondary"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="?attr/colorPrimary"
        android:background="@drawable/rounded_top"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/drag_area"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:background="@drawable/round_corners_drag_handle"
                android:layout_gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="?attr/colorOnPrimary"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@+id/drag_area"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



        <TextView
            android:id="@+id/bottom_tab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Send Magic Packet"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/drag_area"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:id="@+id/mac_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/mac_address"
            app:boxStrokeErrorColor="?attr/colorOnPrimary"
            app:errorTextColor="?attr/colorOnPrimary"
            app:errorIconTint="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/bottom_tab_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mac_text"
                android:layout_width="match_parent"
                android:inputType="textNoSuggestions"
                android:maxEms="17"
                android:layout_height="55dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:text="@string/send"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:background="@drawable/button_on_primary_color"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/mac_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@+id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_layout_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bottom_layout_tab_left"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/vertical_line"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="?attr/colorOnPrimaryFixed"
                        android:layout_marginVertical="10dp"
                        app:layout_constraintStart_toStartOf="@id/vertical_guideline_tab"/>

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/vertical_guideline_tab"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/vertical_guideline_tab"
                        app:layout_constraintEnd_toEndOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/horizontal_line"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?attr/colorOnPrimaryFixed"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_tab"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/horizontal_guideline_tab"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_layout_tab"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_tab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageButton
                        android:id="@+id/button_linkedin"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_linkedin_24"
                        app:tint="?attr/colorOnPrimaryFixed"
                        android:background="@drawable/round_corners_button_home_tab"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/button_github"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/linkedin_icon"/>

                    <ImageButton
                        android:id="@+id/button_github"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:padding="5dp"
                        android:src="@drawable/baseline_github_24"
                        app:tint="?attr/colorOnPrimaryFixed"
                        android:background="@drawable/round_corners_button_home_tab"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/button_linkedin"
                        app:layout_constraintEnd_toStartOf="@id/button_twitter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/github_icon"/>

                    <ImageButton
                        android:id="@+id/button_twitter"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:padding="5dp"
                        android:src="@drawable/baseline_x_24"
                        app:tint="?attr/colorOnPrimaryFixed"
                        android:background="@drawable/round_corners_button_home_tab"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/button_github"
                        app:layout_constraintEnd_toStartOf="@id/button_website"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/twitter_x_icon"/>

                    <ImageButton
                        android:id="@+id/button_website"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_web_24"
                        app:tint="?attr/colorOnPrimaryFixed"
                        android:background="@drawable/round_corners_button_home_tab"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/button_twitter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/website_icon"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>